--- a/Build Day/1.md
+++ b/Build Day/1.md
@@ -1,522 +1,421 @@
-Each project is **simple**, **beginner-friendly**, and uses **one clear Web API**.
 
 ---
 
-# ✅ **1. Soundboard App**
+# ✅ **1. Soundboard Pro (Audio API)**
 
-### 🎧 **Web API Used:** Audio API (`new Audio()`)
+### 🎧 Web API: `Audio()`
 
----
-
-## 📌 **Problem Statement**
-
-Create a webpage with multiple buttons. Each button plays a unique sound (like a drum pad or fun effects). Users can click to produce sounds instantly.
+A fun soundboard with multiple effects and customization.
 
 ---
 
-## 🎯 **Motivation**
+## 📌 Problem Statement
 
-It teaches how to load audio files and trigger them with user actions — the easiest possible use of a Web API.
-
----
-
-## ⭐ **Core Features**
-
-* A grid of buttons
-* Each button plays a different audio
-* A volume slider
-* Mute/unmute toggle
-* Add-your-own-sound via file input (optional)
+Build a soundboard where users can play sounds, group them, favorite them, and even upload new sounds.
 
 ---
 
-## 🔧 **Flow**
+## ⭐ Feature List
 
-1. Page loads → Sound buttons appear.
-2. User clicks "Laugh" button → plays laugh.mp3.
-3. User adjusts volume slider → updates global volume.
-4. Mute toggle → sets audio volume to 0.
-5. User uploads an MP3 → new button is added that plays it.
+### **Core**
 
----
+* Grid of sound buttons
+* Click to play sound
+* Volume slider
+* Mute toggle
 
-## 💾 **Data Model** (simple array)
+### **Additional Features**
 
-```js
-[
-  { label: "Clap", file: "clap.mp3" },
-  { label: "Laugh", file: "laugh.mp3" }
-]
-```
+* **Favorite Sounds Section:**
 
----
+  * Click ⭐ to add a sound to favorites
+  * Favorites appear at the top
 
-## 📂 **Folder Structure**
+* **Categories / Filters:**
 
-```
-soundboard/
-  index.html
-  style.css
-  script.js
-  sounds/
-    clap.mp3
-    laugh.mp3
-```
+  * “Animals”, “Instruments”, “Funny”, “Custom”
+  * Filter buttons show only one category
 
----
+* **Upload Sound:**
 
-## 🧠 **What Students Learn**
+  * User uploads an MP3
+  * Automatically creates a new sound button
+  * Stored in localStorage as Base64
 
-* Audio API basics
-* DOM event listeners
-* Generating buttons using data
-* Managing volume
+* **Playback Modes:**
+
+  * Play once
+  * Loop mode
+  * Play on hover
 
 ---
 
-## 🔥 **Optional Extensions**
+## 🧠 Skills Learned
 
-* Grid layout for sounds
-* Looping mode
-* Keyboard triggers (press "A" to play clap)
+* Audio API
+* FileReader (for uploads)
+* DOM filtering logic
+* localStorage for favorites
 
 ---
 
 ---
 
-# ✅ **2. Copy & Paste Helper**
+# ✅ **2. Clipboard Utility Dashboard (Clipboard API)**
 
-### 📋 **Web API Used:** Clipboard API
-
----
-
-## 📌 **Problem Statement**
-
-Build a tool that easily copies user-entered text to clipboard and pastes clipboard content into a textarea.
+### 📋 Web API: `navigator.clipboard`
 
 ---
 
-## 🎯 **Motivation**
+## 📌 Problem Statement
 
-The Clipboard API is extremely simple and useful for everyday tools.
+A full clipboard management dashboard to copy, paste, save snippets, and reuse them.
 
 ---
 
-## ⭐ **Core Features**
+## ⭐ Feature List
+
+### **Core**
 
 * Textarea input
-* "Copy" button → copies text
-* "Paste" button → pastes clipboard data into textarea
-* A mini “history” of copied items stored manually in localStorage (not the clipboard API)
+* Copy button
+* Paste button
+
+### **Additional Features**
+
+* **Saved Snippet Library:**
+
+  * Click “Save snippet” → saved to list
+  * Snippets clickable → auto-paste into textarea
+  * Delete snippet
+  * Saved using localStorage
+
+* **Character / Word Count Panel:**
+  Updates live as user types.
+
+* **Auto-Copy Mode:**
+  When user types, automatically copies text every 2 seconds.
+
+* **Dark Mode:**
+  Toggle theme, saved in localStorage.
 
 ---
 
-## 🔧 **Flow**
+## 🧠 Skills Learned
 
-1. User types “Hello world”.
-2. Click "Copy" → now the text is inside clipboard.
-3. User clicks "Paste" → textarea gets clipboard content.
-4. Copied items list appears below.
-
----
-
-## 💾 **Data Model**
-
-```js
-{
-  history: ["Hello world", "Some text"]
-}
-```
-
----
-
-## 📂 **Folder Structure**
-
-```
-clipboard-helper/
-  index.html
-  style.css
-  script.js
-```
-
----
-
-## 🧠 **What Students Learn**
-
-* Clipboard API (copy/paste programmatically)
-* localStorage for a simple history
-* Basic DOM input handling
-
----
-
-## 🔥 **Optional Extensions**
-
-* “Clear history” button
-* Character count
-* Dark mode
+* Clipboard API (copy/paste)
+* localStorage
+* Live DOM updates
+* Theme switching
 
 ---
 
 ---
 
-# ✅ **3. Favorite Quotes Board**
+# ✅ **3. MyQuote Vault (localStorage API)**
 
-### 💾 **Web API Used:** localStorage API
-
----
-
-## 📌 **Problem Statement**
-
-A simple quote board where users add quotes and they remain saved even after refreshing the page.
+### 💾 Web API: `localStorage`
 
 ---
 
-## 🎯 **Motivation**
+## 📌 Problem Statement
 
-localStorage is the most beginner-friendly, useful API for DOM apps.
-
----
-
-## ⭐ **Core Features**
-
-* Input box to add a quote
-* Quote appears as a card
-* Delete any quote
-* “Random Quote” button
-* Data persists across refresh
+A personal quote manager with categories, search, and favorites.
 
 ---
 
-## 🔧 **Flow**
+## ⭐ Feature List
 
-1. User types a quote → clicks "Add".
-2. Quote card is created and appended.
-3. Quote list saved in localStorage.
-4. Refresh → all quotes load again.
-5. "Random" button picks one card visually.
+### **Core**
+
+* Add quote
+* Display cards
+* Delete quote
+* Persist with localStorage
+
+### **Additional Features**
+
+* **Categories:**
+
+  * “Motivation”, “Love”, “Life”, etc.
+  * Category dropdown when adding
+  * Filter by category
+
+* **Favorites:**
+
+  * Star icon on every card
+  * Favorite quotes shown in a separate tab
+
+* **Search Bar:**
+
+  * Search through all saved quotes live
+  * Highlight matching words
+
+* **Random Quote Generator:**
+
+  * Button to show a random card
+  * Animated highlight of selected card
+
+* **Stats Panel:**
+
+  * Total quotes
+  * Favorite count
+  * Category breakdown
 
 ---
 
-## 💾 **Data Model**
+## 🧠 Skills Learned
 
-```js
-[
-  { id: 1, text: "Be yourself; everyone else is already taken." }
-]
-```
-
----
-
-## 📂 **Folder Structure**
-
-```
-quotes-board/
-  index.html
-  style.css
-  script.js
-```
-
----
-
-## 🧠 **What Students Learn**
-
-* CRUD with DOM
-* Array ↔ localStorage syncing
-* Rendering items dynamically
-
----
-
-## 🔥 **Optional Extensions**
-
-* Edit quote
-* Search quotes
-* Tag quotes with categories
+* Data modeling
+* Filtering + searching
+* Tab switching
+* Saving structured data in localStorage
 
 ---
 
 ---
 
-# ✅ **4. Drink Water Reminder**
+# ✅ **4. Hydration Buddy (Notification API)**
 
-### 🔔 **Web API Used:** Notification API
-
----
-
-## 📌 **Problem Statement**
-
-A simple hydration reminder that sends a notification at the press of a button.
+### 🔔 Web API: `Notification.requestPermission()`
 
 ---
 
-## 🎯 **Motivation**
+## 📌 Problem Statement
 
-Students learn permission requests + sending a notification.
-
----
-
-## ⭐ **Core Features**
-
-* Ask user for notification permission
-* “Notify Me Now” → browser alert notification
-* Optional loop reminder every X minutes (easy timer)
+A fun drink-water reminder app that nudges users to stay hydrated.
 
 ---
 
-## 🔧 **Flow**
+## ⭐ Feature List
 
-1. User clicks "Enable Notifications".
-2. Browser asks permission.
-3. User clicks "Remind Me Now".
-4. Notification appears:
-   **"💧 Time to drink water!"**
-5. Optionally, set interval: every 30 minutes → show notification.
+### **Core**
+
+* Enable notifications
+* Send manual reminder
+
+### **Additional Features**
+
+* **Custom Reminder Interval:**
+  User chooses: 15m, 30m, 45m, 1 hour.
+
+* **Animated Progress Bar:**
+  Shows how close next reminder is.
+
+* **Daily Water Intake Tracker:**
+
+  * “Add 250ml” button
+  * Shows total cups consumed
+  * Saves progress in localStorage
+
+* **Daily Goals:**
+
+  * Set a daily water goal
+  * Visual goal progress circle
+  * Celebration animation when goal achieved
+
+* **Reminder History Log:**
+
+  * Logs every notification sent
+  * Shows timestamps
 
 ---
 
-## 📂 **Folder Structure**
+## 🧠 Skills Learned
 
-```
-water-reminder/
-  index.html
-  style.css
-  script.js
-```
-
----
-
-## 🧠 **What Students Learn**
-
-* How to request permission
-* Creating notifications
-* Writing simple timers
-
----
-
-## 🔥 **Optional Extensions**
-
-* Track cups of water
-* Daily counter
-* Progress bar
+* Notification API
+* Timers & intervals
+* Progress UI
+* User settings persistence
 
 ---
 
 ---
 
-# ✅ **5. Speech-to-Text Notes App**
+# ✅ **5. Voice Notes Mini (Speech Recognition API)**
 
-### 🎤 **Web API Used:** SpeechRecognition API
-
----
-
-## 📌 **Problem Statement**
-
-A simple page where clicking a mic button starts listening and converting speech into text notes.
+### 🎤 Web API: `SpeechRecognition`
 
 ---
 
-## 🎯 **Motivation**
+## 📌 Problem Statement
 
-Great introduction to voice input — very simple implementation.
-
----
-
-## ⭐ **Core Features**
-
-* Start / Stop speech recognition
-* Live transcription
-* Save as note
-* Clear all notes
+Build a voice-to-text note-making tool with live transcription and multiple notes support.
 
 ---
 
-## 🔧 **Flow**
+## ⭐ Feature List
 
-1. User clicks “Start Recording”.
-2. Speaks: “Buy milk, meet friend.”
-3. Text instantly appears on screen.
-4. User clicks "Save Note".
-5. Notes displayed in list.
+### **Core**
+
+* Start/Stop voice recording
+* Display live speech transcription
+
+### **Additional Features**
+
+* **Save as Note:**
+
+  * Store note card
+  * Edit note
+  * Delete note
+  * Save all notes using localStorage
+
+* **Language Selector:**
+
+  * Support English, Hindi, Bengali, etc.
+
+* **Auto-Punctuation Toggle:**
+  Automatically add periods and commas based on pauses.
+
+* **Voice Commands:**
+
+  * “New note” → creates new note
+  * “Clear” → clears text box
+
+* **Export Notes:**
+  Export all notes to `.txt` file.
 
 ---
 
-## 📂 **Folder Structure**
+## 🧠 Skills Learned
 
-```
-speech-notes/
-  index.html
-  style.css
-  script.js
-```
-
----
-
-## 🧠 **What Students Learn**
-
-* SpeechRecognition events
-* onresult handler
-* DOM updates from API output
-
----
-
-## 🔥 **Optional Extensions**
-
-* Highlight words as they appear
-* Detect language automatically
+* SpeechRecognition
+* Language configuration
+* Storing and editing notes
+* File exporting
 
 ---
 
 ---
 
-# ✅ **6. To-Do List with Sound Effects**
+# ✅ **6. To-Do List with Delightful Sounds (Audio API)**
 
-### 🔊 **Web API Used:** Audio API (interaction feedback)
-
----
-
-## 📌 **Problem Statement**
-
-A minimal to-do list where each action—add, delete, complete—plays a sound.
+### 🔊 Web API: `Audio()`
 
 ---
 
-## 🎯 **Motivation**
+## 📌 Problem Statement
 
-Same Audio API but different use-case → interaction UX.
+Build a to-do list with rewarding sound effects for every action.
 
 ---
 
-## ⭐ **Core Features**
+## ⭐ Feature List
+
+### **Core**
 
 * Add task
-* Mark task done (plays "ding")
-* Delete task (plays "pop")
-* Save in localStorage (optional)
+* Mark completed
+* Delete task
+
+### **Additional Features**
+
+* **Action Sounds:**
+
+  * Add → “pop”
+  * Done → “ding”
+  * Delete → “woosh”
+
+* **Task Categories:**
+  “Work”, “Personal”, “School”, “Shopping”
+
+* **Sorting Options:**
+
+  * Alphabetically
+  * Newest first
+  * Completed first
+
+* **Persistent Tasks:**
+  Save tasks in localStorage
+
+* **Task Counter Widget:**
+  Shows completed / total count dynamically
+
+* **Auto-focus Input:**
+  When a task is added, focus returns to input automatically.
 
 ---
 
-## 🔧 **Flow**
+## 🧠 Skills Learned
 
-1. User adds a task → "add.mp3" plays.
-2. User marks it done → "success.mp3".
-3. Deleting task → "delete.mp3".
-
----
-
-## 📂 **Folder Structure**
-
-```
-todo-sounds/
-  index.html
-  style.css
-  script.js
-  sounds/
-    add.mp3
-    success.mp3
-    delete.mp3
-```
-
----
-
-## 🧠 **What Students Learn**
-
-* Using sound for UX
-* Simple task management
-* Event listeners
-
----
-
-## 🔥 **Optional Extensions**
-
-* Sort tasks alphabetically
-* Filter: done/not done
+* Audio events for UX
+* DOM filtering
+* Sorting lists
+* Data persistence
 
 ---
 
 ---
 
-# ✅ **7. Countdown Timer with Notification + Alarm**
+# ✅ **7. Countdown Master (Notification + Audio)**
 
-### 🔔 **Web APIs Used:** Notification API + Audio API
-
-*(Still beginner-friendly)*
+### 🔔 Web APIs: Notification API + Audio API
 
 ---
 
-## 📌 **Problem Statement**
+## 📌 Problem Statement
 
-A timer where the user enters seconds, and when the time ends it shows a notification and plays a short beep.
-
----
-
-## 🎯 **Motivation**
-
-Brings together timer logic + 2 simple APIs.
+A countdown timer with sound and notification alerts.
 
 ---
 
-## ⭐ **Core Features**
+## ⭐ Feature List
 
-* Input box for number of seconds
-* Start / Stop / Reset
-* On finish →
+### **Core**
 
-  * browser notification
-  * beep sound
-* Simple progress display
+* Set number of seconds
+* Start/Stop timer
+* Alert when finished
 
----
+### **Additional Features**
 
-## 🔧 **Flow**
+* **Audio Alert:**
+  Play “timer-beep.mp3”
 
-1. User enters `30` → Start timer.
-2. Timer updates every second.
-3. Hits zero →
-   **Notification: "⏰ Your timer is done!"**
-   **Play: alarm.mp3**
-4. Reset clears UI.
+* **Visual Countdown Ring:**
 
----
+  * Circular progress bar
+  * Shrinks as timer runs
+  * Easy to build with CSS
 
-## 📂 **Folder Structure**
+* **Preset Buttons:**
 
-```
-timer-notify/
-  index.html
-  style.css
-  script.js
-  sounds/
-    alarm.mp3
-```
+  * 30s, 1min, 5min
+  * Instant start
 
----
+* **Notification Alert:**
+  “Your time is up!”
 
-## 🧠 **What Students Learn**
+* **Timer History:**
 
-* Writing countdown logic
-* Using notifications
-* Playing sound programmatically
+  * Save previous timers (duration + timestamp)
+  * Stored in localStorage
+
+* **Dark/Light Mode:**
+  Toggle saved in localStorage
 
 ---
 
-## 🔥 **Optional Extensions**
+## 🧠 Skills Learned
 
-* Add multiple timers
-* A circular progress bar
-
----
-
-# 🎉 Final Summary (Easy Web API Project Set)
-
-| # | Project             | Web API              | Difficulty  |
-| - | ------------------- | -------------------- | ----------- |
-| 1 | Soundboard          | Audio                | ⭐ Very Easy |
-| 2 | Copy Helper         | Clipboard            | ⭐ Very Easy |
-| 3 | Quotes Board        | localStorage         | ⭐ Very Easy |
-| 4 | Water Reminder      | Notification         | ⭐ Easy      |
-| 5 | Speech Notes        | Speech Recognition   | ⭐ Easy      |
-| 6 | To-Do + Sound       | Audio                | ⭐ Very Easy |
-| 7 | Countdown w/ Alerts | Notification + Audio | ⭐ Easy      |
+* Combining two simple APIs
+* Timers
+* Circular progress animations
+* Saving user preferences
 
 ---
 
+# 🎉 FINAL SUMMARY
+
+| # | Project             | Web API              | Now Includes                               |
+| - | ------------------- | -------------------- | ------------------------------------------ |
+| 1 | Soundboard Pro      | Audio                | Favorites, categories, uploads             |
+| 2 | Clipboard Dashboard | Clipboard            | Snippet library, auto-copy, dark mode      |
+| 3 | Quote Vault         | localStorage         | Categories, search, stats, favorites       |
+| 4 | Hydration Buddy     | Notification         | Goals, intervals, logs, progress bar       |
+| 5 | Voice Notes Mini    | Speech Recognition   | Auto-punctuation, commands, export         |
+| 6 | To-Do with Sounds   | Audio                | Categories, sorting, counters, persistence |
+| 7 | Countdown Master    | Notification + Audio | Presets, ring, history, modes              |
+
+---
 
