--- a/Build Day/1.md
+++ b/Build Day/1.md
@@ -1,421 +1,191 @@
 
 ---
 
-# ✅ **1. Soundboard Pro (Audio API)**
+# ✅ **1. Simple Soundboard (Audio API)**
 
-### 🎧 Web API: `Audio()`
+### ⭐ Web API: `new Audio()`
 
-A fun soundboard with multiple effects and customization.
+## 📌 Idea
 
----
+A basic soundboard where each button plays a sound. That’s it.
+Very small, very fun.
 
-## 📌 Problem Statement
+## 🎯 Features
 
-Build a soundboard where users can play sounds, group them, favorite them, and even upload new sounds.
+* 4–6 buttons (Dog, Clap, Pop, Laugh)
+* Clicking plays the sound
+* One volume slider
+* (Optional) Mute button
 
----
+## 🧩 What students learn
 
-## ⭐ Feature List
-
-### **Core**
-
-* Grid of sound buttons
-* Click to play sound
-* Volume slider
-* Mute toggle
-
-### **Additional Features**
-
-* **Favorite Sounds Section:**
-
-  * Click ⭐ to add a sound to favorites
-  * Favorites appear at the top
-
-* **Categories / Filters:**
-
-  * “Animals”, “Instruments”, “Funny”, “Custom”
-  * Filter buttons show only one category
-
-* **Upload Sound:**
-
-  * User uploads an MP3
-  * Automatically creates a new sound button
-  * Stored in localStorage as Base64
-
-* **Playback Modes:**
-
-  * Play once
-  * Loop mode
-  * Play on hover
+* Audio API basics
+* Simple button event listeners
+* DOM structure (grid)
 
 ---
 
-## 🧠 Skills Learned
+# ✅ **2. Copy-Paste Helper (Clipboard API)**
 
-* Audio API
-* FileReader (for uploads)
-* DOM filtering logic
-* localStorage for favorites
+### ⭐ Web API: `navigator.clipboard`
 
----
+## 📌 Idea
 
----
+A textarea with two buttons: **Copy** and **Paste**.
 
-# ✅ **2. Clipboard Utility Dashboard (Clipboard API)**
+## 🎯 Features
 
-### 📋 Web API: `navigator.clipboard`
+* “Copy Text” → copies textarea text
+* “Paste Text” → pastes clipboard content into textarea
+* A small status message: “Copied!”
 
----
+## 🧩 What students learn
 
-## 📌 Problem Statement
-
-A full clipboard management dashboard to copy, paste, save snippets, and reuse them.
-
----
-
-## ⭐ Feature List
-
-### **Core**
-
-* Textarea input
-* Copy button
-* Paste button
-
-### **Additional Features**
-
-* **Saved Snippet Library:**
-
-  * Click “Save snippet” → saved to list
-  * Snippets clickable → auto-paste into textarea
-  * Delete snippet
-  * Saved using localStorage
-
-* **Character / Word Count Panel:**
-  Updates live as user types.
-
-* **Auto-Copy Mode:**
-  When user types, automatically copies text every 2 seconds.
-
-* **Dark Mode:**
-  Toggle theme, saved in localStorage.
+* Clipboard API
+* Working with textarea value
+* Basic error handling (in case browser blocks paste)
 
 ---
 
-## 🧠 Skills Learned
+# ✅ **3. Mini Quote Saver (localStorage)**
 
-* Clipboard API (copy/paste)
-* localStorage
-* Live DOM updates
-* Theme switching
+### ⭐ Web API: `localStorage`
 
----
+## 📌 Idea
 
----
+A super simple quote saver.
 
-# ✅ **3. MyQuote Vault (localStorage API)**
+## 🎯 Features
 
-### 💾 Web API: `localStorage`
+* Input field → Add Quote button
+* Show all saved quotes as list items
+* Delete a quote
+* All quotes stay saved on refresh
 
----
+## 🧩 What students learn
 
-## 📌 Problem Statement
-
-A personal quote manager with categories, search, and favorites.
-
----
-
-## ⭐ Feature List
-
-### **Core**
-
-* Add quote
-* Display cards
-* Delete quote
-* Persist with localStorage
-
-### **Additional Features**
-
-* **Categories:**
-
-  * “Motivation”, “Love”, “Life”, etc.
-  * Category dropdown when adding
-  * Filter by category
-
-* **Favorites:**
-
-  * Star icon on every card
-  * Favorite quotes shown in a separate tab
-
-* **Search Bar:**
-
-  * Search through all saved quotes live
-  * Highlight matching words
-
-* **Random Quote Generator:**
-
-  * Button to show a random card
-  * Animated highlight of selected card
-
-* **Stats Panel:**
-
-  * Total quotes
-  * Favorite count
-  * Category breakdown
+* Saving array into localStorage using JSON
+* Rendering a list dynamically
+* Simple CRUD operations
 
 ---
 
-## 🧠 Skills Learned
+# ✅ **4. Notification Clicker (Notification API)**
 
-* Data modeling
-* Filtering + searching
-* Tab switching
-* Saving structured data in localStorage
+### ⭐ Web API: `Notification`
 
----
+## 📌 Idea
 
----
+When user clicks a button, a notification pops up saying “Hello!”.
 
-# ✅ **4. Hydration Buddy (Notification API)**
+## 🎯 Features
 
-### 🔔 Web API: `Notification.requestPermission()`
+* “Enable Notifications” button (request permission)
+* “Send Notification” button
+* Notification: “👋 Hey there!”
 
----
+## 🧩 What students learn
 
-## 📌 Problem Statement
-
-A fun drink-water reminder app that nudges users to stay hydrated.
-
----
-
-## ⭐ Feature List
-
-### **Core**
-
-* Enable notifications
-* Send manual reminder
-
-### **Additional Features**
-
-* **Custom Reminder Interval:**
-  User chooses: 15m, 30m, 45m, 1 hour.
-
-* **Animated Progress Bar:**
-  Shows how close next reminder is.
-
-* **Daily Water Intake Tracker:**
-
-  * “Add 250ml” button
-  * Shows total cups consumed
-  * Saves progress in localStorage
-
-* **Daily Goals:**
-
-  * Set a daily water goal
-  * Visual goal progress circle
-  * Celebration animation when goal achieved
-
-* **Reminder History Log:**
-
-  * Logs every notification sent
-  * Shows timestamps
+* Permissions
+* Simple Notification() constructor
+* Very small code but very cool outcome
 
 ---
 
-## 🧠 Skills Learned
+# ✅ **5. Speech-to-Text Pad (Speech Recognition API)**
 
-* Notification API
-* Timers & intervals
-* Progress UI
-* User settings persistence
+### ⭐ Web API: `SpeechRecognition`
 
----
+## 📌 Idea
 
----
+Click the mic → speak → text appears in a textarea.
 
-# ✅ **5. Voice Notes Mini (Speech Recognition API)**
+## 🎯 Features
 
-### 🎤 Web API: `SpeechRecognition`
+* Start Listening button
+* Live speech appears in textbox
+* Stop Listening button
+* Save result as a simple note (listed below)
 
----
+## 🧩 What students learn
 
-## 📌 Problem Statement
-
-Build a voice-to-text note-making tool with live transcription and multiple notes support.
-
----
-
-## ⭐ Feature List
-
-### **Core**
-
-* Start/Stop voice recording
-* Display live speech transcription
-
-### **Additional Features**
-
-* **Save as Note:**
-
-  * Store note card
-  * Edit note
-  * Delete note
-  * Save all notes using localStorage
-
-* **Language Selector:**
-
-  * Support English, Hindi, Bengali, etc.
-
-* **Auto-Punctuation Toggle:**
-  Automatically add periods and commas based on pauses.
-
-* **Voice Commands:**
-
-  * “New note” → creates new note
-  * “Clear” → clears text box
-
-* **Export Notes:**
-  Export all notes to `.txt` file.
+* Basic speech recognition
+* DOM updates
+* Handling `onresult`
 
 ---
 
-## 🧠 Skills Learned
+# ✅ **6. To-Do List with a Done Sound (Audio API)**
 
-* SpeechRecognition
-* Language configuration
-* Storing and editing notes
-* File exporting
+### ⭐ Web API: `Audio()` but with a different purpose
 
----
+## 📌 Idea
 
----
+A very small to-do app where marking a task as done plays a “ding” sound.
 
-# ✅ **6. To-Do List with Delightful Sounds (Audio API)**
+## 🎯 Features
 
-### 🔊 Web API: `Audio()`
-
----
-
-## 📌 Problem Statement
-
-Build a to-do list with rewarding sound effects for every action.
-
----
-
-## ⭐ Feature List
-
-### **Core**
-
-* Add task
-* Mark completed
+* Add a task
+* Click task → mark done + play ding.mp3
 * Delete task
+* (Optional) Save in localStorage
 
-### **Additional Features**
+## 🧩 What students learn
 
-* **Action Sounds:**
-
-  * Add → “pop”
-  * Done → “ding”
-  * Delete → “woosh”
-
-* **Task Categories:**
-  “Work”, “Personal”, “School”, “Shopping”
-
-* **Sorting Options:**
-
-  * Alphabetically
-  * Newest first
-  * Completed first
-
-* **Persistent Tasks:**
-  Save tasks in localStorage
-
-* **Task Counter Widget:**
-  Shows completed / total count dynamically
-
-* **Auto-focus Input:**
-  When a task is added, focus returns to input automatically.
+* DOM lists
+* Click events
+* Playing small feedback sound
 
 ---
 
-## 🧠 Skills Learned
+# ✅ **7. Easy Countdown Timer with Alert (Notification + Audio)**
 
-* Audio events for UX
-* DOM filtering
-* Sorting lists
-* Data persistence
+### ⭐ Web API: Notification + Audio
 
----
+(Still simple. Two easy APIs.)
 
----
+## 📌 Idea
 
-# ✅ **7. Countdown Master (Notification + Audio)**
+Enter seconds → countdown → show notification + beep sound.
 
-### 🔔 Web APIs: Notification API + Audio API
+## 🎯 Features
 
----
+* Input seconds
+* Start button
+* Live countdown display
+* At zero:
 
-## 📌 Problem Statement
+  * Notification “Timer finished!”
+  * Play alert sound
 
-A countdown timer with sound and notification alerts.
+## 🧩 What students learn
 
----
-
-## ⭐ Feature List
-
-### **Core**
-
-* Set number of seconds
-* Start/Stop timer
-* Alert when finished
-
-### **Additional Features**
-
-* **Audio Alert:**
-  Play “timer-beep.mp3”
-
-* **Visual Countdown Ring:**
-
-  * Circular progress bar
-  * Shrinks as timer runs
-  * Easy to build with CSS
-
-* **Preset Buttons:**
-
-  * 30s, 1min, 5min
-  * Instant start
-
-* **Notification Alert:**
-  “Your time is up!”
-
-* **Timer History:**
-
-  * Save previous timers (duration + timestamp)
-  * Stored in localStorage
-
-* **Dark/Light Mode:**
-  Toggle saved in localStorage
+* setInterval basic
+* Notification simple usage
+* Audio feedback
 
 ---
 
-## 🧠 Skills Learned
+# 🎉 Final List — **Super Easy Web API Project Set**
 
-* Combining two simple APIs
-* Timers
-* Circular progress animations
-* Saving user preferences
+| # | Project              | Web API              | Complexity  |
+| - | -------------------- | -------------------- | ----------- |
+| 1 | Simple Soundboard    | Audio                | ⭐ Easy      |
+| 2 | Copy-Paste Helper    | Clipboard            | ⭐ Easy      |
+| 3 | Mini Quote Saver     | localStorage         | ⭐ Easy      |
+| 4 | Notification Clicker | Notification         | ⭐ Very Easy |
+| 5 | Speech-to-Text Pad   | Speech Recognition   | ⭐ Easy      |
+| 6 | To-Do + Done Sound   | Audio                | ⭐ Very Easy |
+| 7 | Countdown Timer      | Notification + Audio | ⭐ Easy      |
 
----
+Each project is:
 
-# 🎉 FINAL SUMMARY
-
-| # | Project             | Web API              | Now Includes                               |
-| - | ------------------- | -------------------- | ------------------------------------------ |
-| 1 | Soundboard Pro      | Audio                | Favorites, categories, uploads             |
-| 2 | Clipboard Dashboard | Clipboard            | Snippet library, auto-copy, dark mode      |
-| 3 | Quote Vault         | localStorage         | Categories, search, stats, favorites       |
-| 4 | Hydration Buddy     | Notification         | Goals, intervals, logs, progress bar       |
-| 5 | Voice Notes Mini    | Speech Recognition   | Auto-punctuation, commands, export         |
-| 6 | To-Do with Sounds   | Audio                | Categories, sorting, counters, persistence |
-| 7 | Countdown Master    | Notification + Audio | Presets, ring, history, modes              |
+* Small
+* Beginner-safe
+* 1–2 hour build
+* Focused on one Web API
+* Great for DOM practice
+* Easy to demo and evaluate
 
 ---
 
